[project]
name = "youtube-summary-mcp"
version = "0.1.0"
description = "A simple calculator MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/jmvoid/youtube-summary-mcp"

[project.scripts]
youtube-summary-mcp-server = "youtube_summary_mcp.main:start_server"
