[project]
name = "youtube-summary-mcp"
version = "0.1.0"
description = "A simple calculator MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.0.2",
    "mcp[cli]>=1.19.0",
    "python-dotenv>=1.0.1",
    "pytubefix",
]

[project.urls]
Homepage = "https://github.com/jmvoid/youtube-summary-mcp"

[project.scripts]
youtube-summary-mcp-server = "youtube_summary_mcp.main:start_server"
